set up dog.html and checked to see that data makes it to firebase

--- a/Cats.html
+++ b/Cats.html
@@ -4,6 +4,7 @@
   <title>Cat Owner Survey</title>
 </head>
 <body>
+  <header>
     <h1 class="pageTitle">
       Which Pets Are Better?
     </h1>
@@ -12,7 +13,7 @@
     </p>
   </header>
   <div>
-    <form action='./index.html'>
+    <form action='./home.html'>
       <input class='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
     <p> hello Cat world</p>
