--- a/home.html
+++ b/home.html
@@ -20,10 +20,10 @@
       <form action='./Cats.html'>
         <input className='catsButton' type="submit" value='If you have cats, click here!'>
       </form>
-      <form action='./Dogs'>
+      <form action='./Dogs.html'>
         <input className='dogsButton' type="submit" value='If you have dogs, click here!'>
       </form>
-      <form action='./CatsAndDogs'>
+      <form action='./CatsAndDogs.html'>
         <input className='catsAndDogsButton' type="submit" value='If you have cats and dogs, click here!'>
       </form>
     </div>
