added dog.html and catanddog.html and made sure data was making it to firebase.

--- a/Cats.html
+++ b/Cats.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Cat Owner Survey</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <header>
@@ -16,7 +17,6 @@
     <form action='./home.html'>
       <input class='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
-    <p> hello Cat world</p>
     <form id='petForm' method='post' encType='text/plain'>
       <p>
         What is your name?:
