--- a/Dogs.html
+++ b/Dogs.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Dog Owner Survey</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <header>
@@ -16,7 +17,6 @@
     <form action='./home.html'>
       <input className='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
-    <p> hello Dog world</p>
     <form id='petForm' method='post' encType='text/plain'>
       <p>
         What is your name?:
