finished with survey TODO is add results page

--- a/home.html
+++ b/home.html
@@ -19,14 +19,17 @@
     </p>
     <div className = 'petMethodSelection'>
       <form action='./Cats.html'>
-        <input className='catsButton' type="submit" value='If you have cats, click here!'>
+        <input class='catsButton' type="submit" value='If you have cats, click here!'>
       </form>
       <form action='./Dogs.html'>
-        <input className='dogsButton' type="submit" value='If you have dogs, click here!'>
+        <input class='dogsButton' type="submit" value='If you have dogs, click here!'>
       </form>
       <form action='./CatsAndDogs.html'>
-        <input className='catsAndDogsButton' type="submit" value='If you have cats and dogs, click here!'>
+        <input class='catsAndDogsButton' type="submit" value='If you have cats and dogs, click here!'>
       </form>
+<!--       <form action='./Results.html'>
+        <input class='resultsButton' type="submit" value='Results of the survey thus far'>
+      </form> -->
     </div>
   </div>
 
