--- a/Cats.html
+++ b/Cats.html
@@ -119,7 +119,7 @@
 
 
 
-      <input className='submitButton' type='submit' value='Submit Cat Costs!'/>
+      <input class='submitButton' type='submit' value='Submit Cat Costs!'/>
     </form>
       <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
       <script src='./js/catDataCollection.js'></script>
