--- a/CatsAndDogs.html
+++ b/CatsAndDogs.html
@@ -232,7 +232,7 @@
 
 
 
-      <input className='submitButton' type='submit' value='Submit Pet Costs!'/>
+      <input class='submitButton' type='submit' value='Submit Pet Costs!'/>
     </form>
      <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
    <script src='./js/catAndDogdataCollection.js'></script>
