--- a/Dogs.html
+++ b/Dogs.html
@@ -123,7 +123,7 @@
 
 
 
-      <input className='submitButton' type='submit' value='Submit Dog Costs!'/>
+      <input class='submitButton' type='submit' value='Submit Dog Costs!'/>
     </form>
     <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
     <script src='./js/dogDataCollection.js'></script>
