changed catanddog page to say cat and dog owner

--- a/CatsAndDogs.html
+++ b/CatsAndDogs.html
@@ -10,7 +10,7 @@
       Which Pets Are Better?
     </h1>
     <p class="catIntro">
-      HELLO, DOG OWNER!<br> Please put whole number dollar amounts in each field.<br>If you do not know the exact amount of an item, please give your best educated guess!
+      HELLO, CAT AND DOG OWNER!<br> Please put whole number dollar amounts in each field.<br>If you do not know the exact amount of an item, please give your best educated guess!
     </p>
   </header>
   <div>
