added alert saying the survey has been submitted

--- a/CatsAndDogs.html
+++ b/CatsAndDogs.html
@@ -209,7 +209,7 @@
         Cat House Modifications (cat doors, etc.):
         <input id='catHouseModifications' type='number' min='0' step='1' name='name' placeholder='How much did it cost?' size='25'/>
       </p>
-      <p>
+      <p>ß
         Dog House Modifications (Dog doors, fences, etc.):
         <input id='dogHouseModifications' type='number' min='0' step='1' name='name' placeholder='How much did it cost?' size='25'/>
       </p>
@@ -230,7 +230,7 @@
 
 
 
-
+      <div class="alert">Your Survey has been submitted!  Thank you SOOOO Much!</div>
 
       <input class='submitButton' type='submit' value='Submit Pet Costs!'/>
     </form>
