--- a/Cats.html
+++ b/Cats.html
@@ -117,7 +117,7 @@
 
 
 
-
+      <div class="alert">Your Survey has been submitted!  Thank you SOOOO Much!</div>
 
       <input class='submitButton' type='submit' value='Submit Cat Costs!'/>
     </form>
