--- a/Dogs.html
+++ b/Dogs.html
@@ -121,7 +121,7 @@
 
 
 
-
+      <div class="alert">Your Survey has been submitted!  Thank you SOOOO Much!</div>
 
       <input class='submitButton' type='submit' value='Submit Dog Costs!'/>
     </form>
