getting result pages set up

--- a/results.html
+++ b/results.html
@@ -18,6 +18,14 @@
       <input class='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
   </div>
+  <div class="results">
+      <ol id='messageList'>
+      </ol>
+  </div>
 
 </body>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
+  <script src='./js/getResults.js'></script>
 </html>
