finalized results pages

--- a/dogresults.html
+++ b/dogresults.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Results of Survey</title>
+  <title>Results of Dog Survey</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -28,5 +28,5 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
-  <script src='./js/getResults.js'></script>
+  <script src='./js/getDogResults.js'></script>
 </html>
