--- a/home.html
+++ b/home.html
@@ -27,6 +27,15 @@
       <form action='./CatsAndDogs.html'>
         <input class='catsAndDogsButton' type="submit" value='If you have cats and dogs, click here!'>
       </form>
+      <p>
+        <br>
+      </p>
+      <form action='./catresults.html'>
+        <input class='catCostButton' type="submit" value='Click here to see the results for Cat Costs!'>
+      </form>
+      <form action='./dogresults.html'>
+        <input class='dogCostButton' type="submit" value='Click here to see the results for Dog Costs!'>
+      </form>
 <!--       <form action='./Results.html'>
         <input class='resultsButton' type="submit" value='Results of the survey thus far'>
       </form> -->
