added caost per year of items

--- a/catresults.html
+++ b/catresults.html
@@ -17,6 +17,9 @@
     <form action='./home.html'>
       <input class='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
+    <form action='./dogresults.html'>
+      <input class='dogCostButton' type="submit" value='Click here to see the results for Dog Costs!'>
+    </form>
   </div>
   <div class="results">
     <p class="message"></p>
