--- a/dogresults.html
+++ b/dogresults.html
@@ -17,6 +17,9 @@
     <form action='./home.html'>
       <input class='returnHome' type="submit" value='Back to Select Pets!' />
     </form>
+    <form action='./catresults.html'>
+      <input class='catCostButton' type="submit" value='Click here to see the results for Cat Costs!'>
+    </form>
   </div>
   <div class="results">
     <p class="message"></p>
