added survey counters

--- a/home.html
+++ b/home.html
@@ -40,7 +40,12 @@
         <input class='resultsButton' type="submit" value='Results of the survey thus far'>
       </form> -->
     </div>
+    <section></section>
   </div>
+
+    <script src="js/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
+  <script src='./js/home.js'></script>
 
 </body>
 </html>
