fixed dog training issue

--- a/CatsAndDogs.html
+++ b/CatsAndDogs.html
@@ -179,6 +179,10 @@
         <input id='catTraining' type='number' min='0' step='1' name='name' placeholder='How much did it cost?' size='25'/>
       </p>
       <p>
+        Dog Training:
+        <input id='dogTraining' type='number' min='0' step='1' name='name' placeholder='How much did it cost?' size='25'/>
+      </p>
+      <p>
         Cat Lodging/Boarding:
         <input id='catLodging' type='number' min='0' step='1' name='name' placeholder='Cost per year?' size='25'/>
       </p>
