deactivated submit buttons to finish up the survey

--- a/Cats.html
+++ b/Cats.html
@@ -119,7 +119,7 @@
 
       <div class="alert">Your Survey has been submitted!  Thank you SOOOO Much!</div>
 
-      <input class='submitButton' type='submit' value='Submit Cat Costs!'/>
+      <!-- <input class='submitButton' type='submit' value='Submit Cat Costs!'/> -->
     </form>
       <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
       <script src='./js/catDataCollection.js'></script>
