--- a/CatsAndDogs.html
+++ b/CatsAndDogs.html
@@ -236,7 +236,7 @@
 
       <div class="alert">Your Survey has been submitted!  Thank you SOOOO Much!</div>
 
-      <input class='submitButton' type='submit' value='Submit Pet Costs!'/>
+      <!-- <input class='submitButton' type='submit' value='Submit Pet Costs!'/> -->
     </form>
      <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
    <script src='./js/catAndDogDataCollection.js'></script>
