added sttement stating survey is closed

--- a/Dogs.html
+++ b/Dogs.html
@@ -12,6 +12,8 @@
     <p class="catIntro">
       HELLO, DOG OWNER!<br> Please put whole number dollar amounts in each field.<br>If you do not know the exact amount of an item, please give your best educated guess!
     </p>
+    <h1>THE SURVEY IS CLOSED!  THANK YOU!</h1>
+
   </header>
   <div>
     <form action='./home.html'>
