--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
     <p class="siteIntro">
       A Science Experiment By William Courtright
     </p>
+
+    <h1>THE SURVEY IS CLOSED!  THANK YOU!</h1>
+
   </header>
   <div>
     <p className="App-intro">
