--- a/dogresults.html
+++ b/dogresults.html
@@ -12,6 +12,9 @@
     <h3 class="catIntro">
       Reults Of The Survey
     </h3>
+
+    <h1>THE SURVEY IS CLOSED!  THANK YOU!</h1>
+
   </header>
   <div>
     <form action='./home.html'>
